	- ntfscp: fix attribute name parsing bug introduced in 1.10.0.  (Yura)
	- ntfsinfo: dump more information for indexes.  (Yura)
	- Fix unistr.c::ntfs_mbstoucs on systems with utf8 locale.  (Yura)
	- Change errno and print more verbose message in case if logfile check
	  failed.  (Yura)
	- Fix random errno returned by ntfs_inode_open() if the MFT record 
	  wasn't in use.  (Szaka)

20/07/2005 - 1.11.1 - Fix several ntfsmount bugs.

	- ntfsmount: Fix several bugs when too small buffer was allocated for
	  filenames on systems with utf8 locale.  (Yura, many thanks to Rich
	  for finding bug)

19/07/2005 - 1.11.0 - Fixes and a new utility ntfsmount, a FUSE ntfs module.

	- ntfscp: fix signal handling: handle both SIGTERM and SIGINT, print
	  correct message.  (Yura)
	- Update manual pages for ntfsprogs, ntfsclone, ntfsresize and 
	  ntfsfix.  (Szaka)
	- ntfsclone: detect and hint users if the destination fs does not
	  support sparse files.  (Szaka)
	- Fix memory management error in ntfs_inode_close.  (Yura)
	- Add new utility - ntfsmount.  It is a FUSE module that reles on
	  libntfs.  (Yura)
	- ntfsresize: support bad clusters list ($BadClus:$Bad), a.k.a. disks
	  having bad sectors if the new --bad-sectors option is used.  (Szaka)
	- ntfsinfo: Dump $EA_INFORMATION and $EA attributes.  (Yura)
	- mkntfs: Fix backup bootsector creation.  Thanks to Timur Amirkhanov
	  for pointing these stupidities out.  (We forgot to set the size
	  before doing it and we wrote more bytes then there were in the buffer
	  if sector size was above 8kiB and we only reserved one sector even
	  when sector size was less than 512 bytes and then we wrote 512 bytes,
	  i.e. beyond the end of the device.)  (Anton)
	- Add new utility (make extra) - ntfsdecrypt.  (Yuval)
	- Improve "already mounted" check.  (Yura)
	- Remove AC_FUNC_MALLOC and AC_FUNC_REALLOC from configure.ac as we
	  do not provide replacement functions for them and the checks break
	  cross compilation.  (Christophe)
