@@ -20,6 +20,8 @@ xx/xx/xxxx - 1.12.0-WIP
 	  failed.  (Yura)
 	- Fix random errno returned by ntfs_inode_open() if the MFT record 
 	  wasn't in use.  (Szaka)
+	- Fix ntfs_attr_p{read,write} to not return less bytes if trapped on
+	  unmapped runlist region.  (Yura)
 
 20/07/2005 - 1.11.1 - Fix several ntfsmount bugs.
 
